--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <a href="mailto:info@conan.io" class="txt-cyan">info@conan.io</a>
             </div>
         </div>
-        <form id="conan-contact-us-form" method="post" action="//formspree.io/info@conan.io" role="form" novalidate>
+        <form id="conan-contact-us-form" method="post" action="//formspree.io/info@conan.io" role="form">
             <div class="row cu-form-container">
                 <div class="cu-form-left col-md-6">
                         <div class="cu-input-div">
