New Logos Update - All

--- a/index.html
+++ b/index.html
@@ -93,44 +93,44 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class="row">
             <div class="col our-users-slider">
-                <div class="user-box bg-light">
-                    <img src="img/logo/pix4d.png" width="116" height="85" alt="Pix4D Logo">
+                <div class="user-box">
+                    <img src="img/logo/pix4d.png" width="auto" height="119" alt="Pix4D Logo">
                 </div>
-                <div class="user-box bg-light">
-                    <img src="img/logo/huawei.png" width="78" height="85" alt="Huawei Logo">
+                <div class="user-box">
+                    <img src="img/logo/huawei.png" width="auto" height="119" alt="Huawei Logo">
                 </div>
-                <div class="user-box bg-light">
-                    <img src="img/logo/melexis.png" width="181" height="85" alt="Melexis Logo">
+                <div class="user-box">
+                    <img src="img/logo/melexis.png" width="auto" height="119" alt="Melexis Logo">
                 </div>
-                <div class="user-box bg-light">
-                    <img src="img/logo/mercedes.png" width="240" height="85"  alt="Mercedes-Benz Logo">
+                <div class="user-box">
+                    <img src="img/logo/mercedes.png" width="auto" height="119"  alt="Mercedes-Benz Logo">
                 </div>
-                <div class="user-box bg-light">
-                    <img src="img/logo/plex.png" width="170" height="85" alt="Plex Logo">
+                <div class="user-box">
+                    <img src="img/logo/plex.png" width="auto" height="119" alt="Plex Logo">
                 </div>
-                <div class="user-box bg-light">
-                    <img src="img/logo/arxan.png" width="86" height="85" alt="Arxan Logo">
+                <div class="user-box">
+                    <img src="img/logo/arxan.png" width="auto" height="119" alt="Arxan Logo">
                 </div>
-                <div class="user-box bg-light">
-                    <img src="img/logo/rheinmetall.png" width="201" height="85" alt="Rheinmetall Logo">
+                <div class="user-box">
+                    <img src="img/logo/rheinmetall.png" width="auto" height="119" alt="Rheinmetall Logo">
                 </div>
-                <div class="user-box bg-light">
-                    <img src="img/logo/bitprim.png" width="213" height="85" alt="Bitprim Logo">
+                <div class="user-box">
+                    <img src="img/logo/bitprim.png" width="auto" height="119" alt="Bitprim Logo">
                 </div>
-                <div class="user-box bg-light">
-                    <img src="img/logo/tanker.png" width="67" height="85" alt="Tanker Logo">
+                <div class="user-box">
+                    <img src="img/logo/tanker.png" width="auto" height="119" alt="Tanker Logo">
                 </div>
-                <div class="user-box bg-light">
-                    <img src="img/logo/khomp.png" width="219" height="85" alt="Khomp Logo">
+                <div class="user-box">
+                    <img src="img/logo/khomp.png" width="auto" height="119" alt="Khomp Logo">
                 </div>
-                <div class="user-box bg-light">
-                    <img src="img/logo/appanywhere.png" width="139" height="85" alt="AppAnywhere Logo">
+                <div class="user-box">
+                    <img src="img/logo/appanywhere.png" width="auto" height="119" alt="AppAnywhere Logo">
                 </div>
-                <div class="user-box bg-light">
-                    <img src="img/logo/poco.png" width="181" height="85" alt="Poco C++ Libraries Logo">
+                <div class="user-box">
+                    <img src="img/logo/poco.png" width="auto" height="119" alt="Poco C++ Libraries Logo">
                 </div>
-                <div class="user-box bg-light">
-                    <img src="img/logo/imageflow.png" width="266" height="85" alt="Imageflow Logo">
+                <div class="user-box">
+                    <img src="img/logo/imageflow.png" width="auto" height="119" alt="Imageflow Logo">
                 </div>
             </div>
         </div>
