In progress form

--- a/index.html
+++ b/index.html
@@ -402,7 +402,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col text-center">
                 <span class="subscribe-text">SIGN UP FOR RELEASE UPDATES:</span>
                 <form id="mktoForm_1479"></form>
-                <script>MktoForms2.loadForm("//app-lon04.marketo.com", "256-FNZ-187", 1479);</script>
+                <script>MktoForms2.loadForm("http://app-lon04.marketo.com", "256-FNZ-187", 1479, function(form){
+                        $(form).on("submit", function(){
+                           //Code: Action (like ajax...)
+                           return false;
+                        })
+                });</script>
             </div>
         </div>
     </div>
