Corrected spelling of Derian Reuss

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 conan.io site, that you can use as references for your
                     own recipes.</p>
                 <p>Engage with other Conan users, contributors and
-                maintainers on <a href="https://twitter.com/conan_io">Twitter</a> and 
+                maintainers on <a href="https://twitter.com/conan_io">Twitter</a> and
                 <a href="https://cpplang.now.sh">Slack #conan</a> channel.
                 New users, questions and discussions are always
                     welcome!</p>
@@ -291,7 +291,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="testimonial">
                     <div class="testimonial-content">
                         <div class="testimonial-title">DevOps Lead at Arxan Technologies</div>
-                        <div class="txt-green">Derian Reus</div>
+                        <div class="txt-green">Derian Reuss</div>
                         <p class="quote">
                             "Conan helped us with our infrastructure overhaul by reducing our full build time by over 40 minutes. That has saved us both Developer time and reduced our AWS bill."
                         </p>
@@ -302,10 +302,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="testimonial-title">C++ Software Developer at Pix4D</div>
                         <div class="txt-green">Luis Díaz Más</div>
                         <p class="quote">
-                            At Pix4D, we suffered for years the pain of managing a few dozens of 3rd party dependencies 
-                            with our home-grown tools. Not only developers were feeling that pain, but also the 
+                            At Pix4D, we suffered for years the pain of managing a few dozens of 3rd party dependencies
+                            with our home-grown tools. Not only developers were feeling that pain, but also the
                             CI/CD infrastructure.
-                            We decided to give Conan a try, and it worked! It does not matter how the libraries 
+                            We decided to give Conan a try, and it worked! It does not matter how the libraries
                             we depend on are built or provided (CMake, autotools, pre-compiled binaries). Conan gives
                             us the flexibility to manage C/C++ libraries of all kinds.
                             We have Conan fully integrated in our CI system and we do pretty advanced things with it. It definitely made our life easier.
