--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img src="img/logo/melexis.png" width="auto" height="119" alt="Melexis Logo">
                 </div>
                 <div class="user-box">
-                    <img src="img/logo/mercedes.png" width="auto" height="119"  alt="Mercedes-Benz Logo">
+                    <img src="img/logo/mercedes2.png" width="auto" height="119"  alt="Mercedes-Benz Logo">
                 </div>
                 <div class="user-box">
                     <img src="img/logo/plex.png" width="auto" height="119" alt="Plex Logo">
