--- a/downloads.html
+++ b/downloads.html
@@ -103,9 +103,8 @@
             </div>
 
             <div class="boxed-content col-lg-2"><a
-                    ng-href="https://github.com/conan-io/conan/releases/download/1.0.2/conan-ubuntu-64_1_0_2.deb"
                     analytics-on="" data-action="download_installer" data-os="ubuntu" analytics-event="ubuntu" analytics-category="download_installer"
-                    href="https://github.com/conan-io/conan/releases/download/1.0.2/conan-ubuntu-64_1_0_2.deb">
+                    href="https://bintray.com/conan/installers/download_file?file_path=conan-ubuntu-64_1_0_2.deb">
                 <div class="boxed-content"><i class="fa fa-linux"></i>
                     <h2 class="boxed-content-title mt-4">Ubuntu/Debian x64 installer</h2>
                     <p>Download</p></div>
@@ -113,10 +112,10 @@
             <div class="boxed-content col-lg-2">
                 <div class="boxed-content"><i class="fa fa-windows"></i>
                     <h2 class="boxed-content-title mt-4">Windows installer</h2>
-                    <p><a href="https://github.com/conan-io/conan/releases/download/1.0.2/conan-win-64_1_0_2.exe"
+                    <p><a href="https://bintray.com/conan/installers/download_file?file_path=conan-win-32_1_0_2.exe"
                     analytics-on="" analytics-event="windows" data-action="download_installer" data-os="windows"
                     analytics-category="download_installer">Download x86_64</a></p>
-                    <p><a href="https://github.com/conan-io/conan/releases/download/1.0.2/conan-win-32_1_0_2.exe"
+                    <p><a href="https://bintray.com/conan/installers/download_file?file_path=conan-win-64_1_0_2.exe"
                     analytics-on="" analytics-event="windows" data-action="download_installer" data-os="windows"
                     analytics-category="download_installer">Download x86</a></p>
                 </div>
