--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+    <!--conan_favicon.png -->
     <title>C/C++ Open Source Package Manager</title>
 
     <!-- Google Tag Manager -->
