--- a/downloads.html
+++ b/downloads.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
     <title>C/C++ Open Source Package Manager</title>
 
     <!-- Google Tag Manager -->
