Front Page: Add CTA for Artifactory CE below hero

--- a/index.html
+++ b/index.html
@@ -87,6 +87,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 </section>
 
+<section id="artifactory-ce-cta" class="bgc-green-ce">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center text-white">
+                <b><a href="downloads.html" class="text-white">Artifactory for C/C++ CE:</a></b> a free on-premises solution for hosting Conan packages.
+                <a href="#" class="text-white pl-1 artifactory-read-more-cta">Read more</a>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section id="our-users">
     <div class="container section-content">
         <div class="row justify-content-center">
