Fix Navbar Display, Move scripts to bottom

--- a/downloads.html
+++ b/downloads.html
@@ -26,7 +26,7 @@
 <header class="conan-header bgc-blue">
     <div class="container header-container">
         <nav class="navbar navbar-expand-md">
-            <a class="navbar-brand" href="index.html"><img src="img/jfrog_conan_logo.png" width="356" class="d-inline-block align-top img-fluid" alt="Conan"></a>
+            <a class="navbar-brand p-0" href="index.html"><img src="img/jfrog_conan_logo.png" width="320" class="d-inline-block align-top img-fluid" alt="Conan"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -152,7 +152,7 @@
                         <div class="spacer-80 d-none d-lg-block"></div>
                         <div class="spacer-30 d-block d-lg-none"></div>
                         <div class="c-plus-plus text-center">
-                            <a href="https://jfrog.com/open-source/" target="_blank">
+                            <a href="https://jfrog.com/open-source/#conan" target="_blank">
                                 <img src="img/c++.svg" class="img-c-plusplus" alt="Artifactory for C/C++ CE" />
                             </a>
                             <div class="zip-install">
