--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <div class="row">
             <div class="col-12 text-center text-white">
-                <b><a href="downloads.html" class="text-white">Artifactory for C/C++ CE:</a></b> a free on-premises solution for hosting Conan packages.
-                <a href="#" class="text-white pl-1 artifactory-read-more-cta">Read more</a>
+                <b><a href="downloads.html" class="text-white download-artifactory-ce-cta">JFrog Artifactory Community Edition for C/C++:</a></b> a free on-premises solution for hosting Conan packages.
+                <b><a href="#" class="text-white pl-1 artifactory-read-more-cta">Read more</a></b>
             </div>
         </div>
     </div>
