--- a/downloads.html
+++ b/downloads.html
@@ -154,7 +154,7 @@
                         <div class="c-plus-plus text-center">
                             <a href="https://jfrog.com/open-source/#conan"
                                target="_blank" class="jfrog-artifactory-ce-cta">
-                                <img src="img/c++.svg" class="img-c-plusplus" alt="Artifactory for C/C++ CE" />
+                                <img src="img/C++.svg" class="img-c-plusplus" alt="Artifactory for C/C++ CE" />
                             </a>
                             <div class="zip-install">
                                 <a href="https://api.bintray.com/content/jfrog/artifactory/jfrog-artifactory-cpp-ce-$latest.zip;bt_package=jfrog-artifactory-cpp-ce-zip" targeet="_blank" class="text-dark artifactory-download-zip-cta">
