--- a/downloads.html
+++ b/downloads.html
@@ -157,7 +157,10 @@
                                 <img src="img/C++.svg" class="img-c-plusplus" alt="Artifactory for C/C++ CE" />
                             </a>
                             <div class="zip-install">
-                                <a href="https://api.bintray.com/content/jfrog/artifactory/jfrog-artifactory-cpp-ce-$latest.zip;bt_package=jfrog-artifactory-cpp-ce-zip" targeet="_blank" class="text-dark artifactory-download-zip-cta">
+                                <a href="https://api.bintray.com/content/jfrog/artifactory/jfrog-artifactory-cpp-ce-$latest.zip;bt_package=jfrog-artifactory-cpp-ce-zip"
+                                   target="_blank"
+                                   data-tech="zip"
+                                   class="text-dark artifactory-download-zip-cta">
                                 <img src="img/zip.svg" class="img-zip-file" alt="zip file">
                                 ZIP INSTALL</a>
                             </div>
@@ -170,6 +173,7 @@
                             <div>
                                 <a href="#"
                                    data-toggle="popover"
+                                   data-tech="docker"
                                    data-content="Copy pull command to clipboard"
                                    class="text-dark artifactory-docker-image-cta"
                                    target="_blank"><u>Pull Latest Artifactory Docker Image</u></a>
@@ -180,6 +184,7 @@
                             <img src="img/logo/debian.svg" class="img-fluid" alt="Debian">
                             <div><a href="https://api.bintray.com/content/jfrog/artifactory-debs/pool/main/j/jfrog-artifactory-cpp-ce-deb/jfrog-artifactory-cpp-ce-$latest.deb;bt_package=jfrog-artifactory-cpp-ce-deb"
                                     target="_blank"
+                                    data-tech="debian"
                                     class="text-dark artifactory-debian-cta">Debian</a>
                             </div>
                         </div>
@@ -187,6 +192,7 @@
                             <img src="img/logo/rpm-120.png" class="img-fluid" alt="rpm">
                             <div><a href="https://api.bintray.com/content/jfrog/artifactory-rpms/jfrog-artifactory-cpp-ce-$latest.rpm;bt_package=jfrog-artifactory-cpp-ce-rpm"
                                     target="_blank"
+                                    data-tech="rpm"
                                     class="text-dark artifactory-rpm-cta">Download RPM</a>
                             </div>
                         </div>
