--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img src="img/logo/appanywhere.png" width="auto" height="119" alt="AppAnywhere Logo">
                 </div>
                 <div class="user-box">
+                    <img src="img/logo/zenaudio.png" width="auto" height="119" alt="Zenaudio.io Logo">
+                </div>
+                <div class="user-box">
                     <img src="img/logo/poco.png" width="auto" height="119" alt="Poco C++ Libraries Logo">
                 </div>
             </div>
