Adding Privacy policy checkbox to Contact-Us Form

--- a/index.html
+++ b/index.html
@@ -404,6 +404,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="cu-form-right col-md-6">
                     <textarea name="message" id="" cols="28" rows="5" placeholder="Message *" required></textarea>
                 </div>
+                <div class="cu-form-row col-md-12 text-center">
+                    <input name="terms" class="d-inline-flex" type="checkbox" id="terms_cu" value="" required>
+                    <label class="check" for="terms_cu">I have read and agree to the <a href="privacy-policy.html" class="link-pp txt-cyan" target="_blank">Privacy Policy</a></label>
+                </div>
 
                 <div class="text-center cu-form-submit-container col-md-12">
                     <button class="button button-submit bgc-dark-blue">SUBMIT MESSAGE</button>
