Add Privacy Policy statement to Newsletter subscriptioin

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
         </form>
         <div class="row subscribe-form-container">
-            <div class="col text-center">
+            <div class="col-12 text-center">
                 <span class="subscribe-text">SIGN UP FOR RELEASE UPDATES:</span>
                 <form id="mktoForm_1479"></form>
                 <script>MktoForms2.loadForm("//app-lon04.marketo.com",
@@ -425,6 +425,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 $("#mktoForm_1479").removeAttr("novalidate");
                                             });
                 </script>
+            </div>
+            <div class="col-12 text-center">
+                <span class="subscribe-text">By clicking "Submit" I acknowledge that I have read and agree to the <a href="privacy-policy.html" class="link-pp txt-cyan" target="_blank">Privacy Policy</a></span>
             </div>
         </div>
     </div>
