Adding Meet the team Banner

--- a/index.html
+++ b/index.html
@@ -375,9 +375,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col text-center">
+                <div id="conan-banner">
+                    <img src="img/conan-meet-the-team.jpg" class="img-fluid" alt="Meet the Conan Team">
+                </div>
+            </div>
+        </div>
     </div>
 </section>
-
 
 <section id="contact-us" class="bgc-blue">
     <div class="container section-content">
